# co-founder

./: .env.example  .gitignore  BRAND.md  CLAUDE.md  DEPLOYMENT.md  DOCUMENTATION.md  PLAN.md  VerboseBuilding.md  brand_guidelines.md  brand_system_prompt.md  claude_code_getinsourced_speed_split.md  package-lock.json
backend/: Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07386005c472_initial_schema_with_state_machine_models.py  1cbc4ccfd46b_add_understanding_sessions_table.py  593f7ce4330a_add_workspace_auth_profile_columns_to_.py  6a8f3f01a56b_fix_user_settings_datetime_columns_to_.py  892d2f2ce669_add_stripe_webhook_events_table.py  978ccdb48f58_add_sandbox_columns_to_jobs.py  a1b2c3d4e5f6_add_sandbox_paused_to_jobs.py  b2a5eef209b4_add_onboarding_sessions_table.py  bb0bc73fe207_add_artifacts_table.py  c4e91a96cf27_add_state_machine_models_stage_configs_.py  d4b8a11f57ae_set_bootstrapper_max_projects_to_2.py  e7a3b1c9d2f4_create_agent_escalations_table.py  f3c9a72b1d08_add_agent_checkpoints_sessions_and_renewal_date.py
backend/app/: main.py
backend/app/agent/: __init__.py  graph.py  llm_helpers.py  path_safety.py  runner.py  runner_autonomous.py  runner_fake.py  runner_real.py  state.py
backend/app/artifacts/: __init__.py  exporter.py  generator.py  markdown_exporter.py  prompts.py
backend/app/core/: auth.py  config.py  exceptions.py  feature_flags.py  llm_config.py  locking.py  logging.py  provisioning.py
backend/app/db/: __init__.py  base.py  redis.py  seed.py
backend/app/domain/: __init__.py  alignment.py  deploy_checks.py  gates.py  progress.py  risks.py  stages.py  templates.py
backend/app/integrations/: github.py
backend/app/memory/: episodic.py  (+2 more)
backend/scripts/: apply_missing_columns.py  fix_stale_sessions.py  test_knowledge_graph.py
backend/tests/: conftest.py  test_auth.py  test_llm_helpers.py  test_preview_check.py  test_sse_phase_events.py
(+924 files in other folders)
