[project]
name = "cofounder-backend"
version = "0.1.0"
description = "AI Technical Co-Founder Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.40.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "e2b-code-interpreter>=1.0.0",
    "mem0ai>=0.1.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "neo4j>=5.0.0",
    "alembic>=1.13.0",
    "stripe>=11.0.0",
    "Pillow>=11.0.0",
    "playwright>=1.58.0",
    "weasyprint>=68.1",
    "jinja2>=3.1.0",
    "asgi-correlation-id>=4.3.0",
    "structlog>=25.0.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
extend-ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "unit: Unit tests - no external services required (fakeredis OK)",
    "integration: Integration tests - require real database and Redis",
]
addopts = "--strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
